# contract-intel

./: .env.example  .gitignore  BACKLOG.md  README.md  create_real_gcp_resources.sh  docker-compose.yml
ai_service/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
ai_service/app/: config.py  gcs.py  main.py  ocr.py  pdf_extract.py  processing.py  pull_worker.py
ai_service/app/agent/: graph.py  llm.py  router.py  state.py
ai_service/app/rag/: retrieval.py
ai_service/app/schemas/: agent_io.py  process.py  processed_event.py
ai_service/app/sinks/: bigquery_sink.py  pubsub_publish.py
ai_service/app/tools/: explanation.py  extraction.py  risk_scoring.py
ai_service/scripts/: ensure_pull_subscription.py
ai_service/tests/: test_bigquery_sink.py  test_graph.py  test_main.py  test_ocr.py  test_pdf_extract.py  test_processing.py  test_processing_ocr.py  test_pubsub_publish.py  test_router.py
django_app/: .gcloudignore  Dockerfile  README.md  manage.py  pyproject.toml
django_app/accounts/: admin.py  models.py
django_app/accounts/migrations/: 0001_initial.py
django_app/analytics/: models.py  queries.py  test_views.py  tests.py  urls.py  views.py
django_app/config/: urls.py
django_app/config/settings/: base.py  dev.py  prod.py
django_app/documents/: admin.py  forms.py  models.py  processed_events.py  pubsub.py  storage.py  test_pages.py  test_processed_events.py  test_processed_webhook.py  tests.py  urls.py  views.py
django_app/documents/migrations/: 0001_initial.py
django_app/templates/registration/: login.html
infra/: bigquery_schema.sql  (+3 more)
(+18 files in other folders)
